[package]
name = "gleam-lsp"
version = "0.1.0"
authors = ["Anthony Bullard <anthony.bullard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core = "14.0.5"
lsp-types = "0.73.0"
futures = "~0.1.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"